spacing issue with safari

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,6 +55,7 @@ body {
   max-width: 100vw;
   min-height: 100vh;
   overflow: hidden;
+  padding-bottom: 1px;
 }
 
 a {
